# video-anonimyzer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-sam3.txt  requirements.txt
badges/: coverage-badge.json  test-badge.json
docs/: ARCHITECTURE.md  CODE_ROAST_REPORT.md  REPORT_ATTIVITA.md  SECURITY_AUDIT_REPORT.md
person_anonymizer/: README.md  __init__.py  anonymization.py  backend_factory.py  camera_calibration.py  cli.py  config.py  detection.py  manual_reviewer.py  models.py  normalization.py  output.py  person_anonymizer.py  pipeline.py  pipeline_stages.py  postprocessing.py  preprocessing.py  rendering.py  requirements.txt  sam3_backend.py  stage_detection.py  stage_refinement.py  stage_review.py  tracking.py
reports/: ARCHITECTURE_REVIEW.md  CODE_REVIEW_REPORT.md  CODE_ROAST_REPORT.md  SECURITY_AUDIT_REPORT.md  TEST_QUALITY_REPORT.md
tests/: conftest.py  test_anonymization.py  test_anonymization_extended.py  test_backend_factory.py  test_camera_calibration.py  test_cli.py  test_cli_missing_lines.py  test_config.py  test_config_missing_lines.py  test_config_validation.py  test_detection.py  test_detection_extended.py  test_manual_reviewer.py  test_normalization_extended.py  test_output.py  test_output_capture.py  test_pipeline.py  test_pipeline_errors.py  test_pipeline_runner.py  test_postprocessing.py  test_postprocessing_extended.py  test_preprocessing.py  test_preprocessing_extended.py  test_rendering.py  test_rendering_extended.py  test_review_state.py  test_web.py  (+7 more)
(+17 files in other folders)
